# cmake-cpp-template

./: CMakeLists.txt  LICENSE  README.md
cmake/: GoogleTest.cmake
example/: CMakeLists.txt  main.cpp
example/allocators/: CMakeLists.txt
example/allocators/include/: BlockAllocator.hpp
example/allocators/source/: BlockAllocator.cpp
example/allocators/tests/: BlockAllocator_test.cpp  CMakeLists.txt
